--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
                 </div>
             `;
             detailsView.classList.remove('hidden');
+            document.body.classList.add('no-scroll');
             detailsView.scrollIntoView({ behavior: 'smooth', block: 'center' });
         }
 
@@ -356,6 +357,7 @@
         detailsView.addEventListener('click', e => {
             if (e.target.id === 'close-details') {
                 detailsView.classList.add('hidden');
+                document.body.classList.remove('no-scroll');
             }
         });
         
