--- a/index.html
+++ b/index.html
@@ -59,14 +59,17 @@
         }
         #details-view {
   overflow-y: auto;
-  max-height: 80vh;
+  -webkit-overflow-scrolling: touch;
+  max-height: 100vh;
+  height: 100vh;
   position: fixed;
-  top: 10vh;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 95vw;
-  max-width: 600px;
+  top: 0;
+  left: 0;
+  width: 100vw;
   z-index: 9999;
+  background: white;
+  border-radius: 0;
+  padding: 1rem;
 }
 body.no-scroll {
   overflow: hidden;
