--- a/index.html
+++ b/index.html
@@ -361,6 +361,9 @@ body.no-scroll {
             <ul class="space-y-2 text-gray-700 list-disc list-inside bg-gray-50 p-4 rounded-lg">
                 ${specsHtml}
             </ul>
+            <button id="demande-devis" class="mt-6 w-full bg-[#E0005B] text-white px-4 py-3 rounded-lg font-semibold hover:bg-opacity-90">
+                Demander un devis pour ce produit
+            </button>
         </div>
     </div>
 `;
