--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ body.no-scroll {
                     <img src="${p.imageUrl}" alt="${p.name}" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-bold mb-2">${p.name}</h4>
-                        <p class="text-gray-600 mb-4 h-12">${p.description}</p>
+                        <p class="text-gray-600 mb-6">${p.description}</p>
                         <div class="flex items-center justify-between text-sm font-semibold">
                             ${p.surface ? `<span class="bg-gray-100 text-gray-800 px-3 py-1 rounded-full">${p.surface} m²</span>` : '<span></span>'}
                             <span class="text-[#E0005B] hover:underline">Voir les détails →</span>
