--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ body.no-scroll {
             <div class="max-w-xl mx-auto bg-white rounded-2xl shadow-lg p-8">
                 <h3 class="text-3xl font-bold text-center mb-4">Contactez-nous</h3>
                 <p class="text-gray-600 text-center mb-8">Pour plus d'informations ou pour une demande de devis, remplissez le formulaire ci-dessous.</p>
-                <form id="contact-form" class="space-y-4">
+                <form id="contact-form" action="https://formspree.io/f/xnnbwelv" method="POST" class="space-y-4">
                     <div>
                         <input type="text" id="nom" name="nom" placeholder="Nom" class="form-input" required>
                     </div>
