--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #00000;
+            background-color: #03142A;
         }
         .chart-container {
             position: relative;
@@ -111,13 +111,13 @@ body.no-scroll {
 
         <section id="hero" class="text-center mb-12">
 <h2 class="text-4xl md:text-5xl font-bold mb-4 text-[#E0005B]">Votre Scène, Notre Expertise</h2>
-<p class="text-lg text-gray-600 max-w-3xl mx-auto">
+<p class="text-lg text-white max-w-3xl mx-auto">
                 Chez <strong>PRODJEKT</strong>, nous donnons vie à vos événements. Parcourez notre catalogue interactif pour trouver la structure parfaite, des scènes grandioses aux dômes immersifs.
             </p>
         </section>
 
         <section id="catalogue" class="mb-16">
-            <h3 class="text-3xl font-bold text-center mb-8">Explorer nos solutions</h3>
+            <h3 class="text-3xl font-bold text-white text-center mb-8">Explorer nos solutions</h3>
             <div id="filters" class="flex flex-wrap justify-center gap-2 mb-8">
             </div>
 
