--- a/index.html
+++ b/index.html
@@ -436,6 +436,20 @@ if (images.length > 1) {
         detailsView.classList.add('hidden');
         document.body.classList.remove('no-scroll');
     };
+    // Zoom sur image (lightbox)
+const lightbox = document.getElementById('img-lightbox');
+const lightboxImg = document.getElementById('lightbox-img');
+detailsView.querySelector('#diapo-img').onclick = () => {
+    lightboxImg.src = detailsView.querySelector('#diapo-img').src;
+    lightbox.classList.remove('hidden');
+    document.body.classList.add('no-scroll');
+};
+// Fermer le zoom au clic sur l'overlay
+lightbox.onclick = () => {
+    lightbox.classList.add('hidden');
+    lightboxImg.src = "";
+    document.body.classList.remove('no-scroll');
+};
 }
 }
 
@@ -557,6 +571,8 @@ if (images.length > 1) {
             renderChart('surface');
         });
     </script>
-
+<div id="img-lightbox" class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-80 flex items-center justify-center z-[99999] hidden">
+    <img id="lightbox-img" src="" alt="" class="max-w-[90vw] max-h-[90vh] rounded-2xl shadow-xl border-4 border-white" />
+</div>
 </body>
 </html>
