--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@ function setActive(btn) {
 <div id="img-lightbox" class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-80 flex items-center justify-center z-[99999] hidden">
     <img id="lightbox-img" src="" alt="" class="max-w-[90vw] max-h-[90vh] rounded-2xl shadow-xl border-4 border-white" />
 </div>
+    <script>
     document.getElementById('contact-form').addEventListener('submit', function(e) {
     e.preventDefault();
     fetch(this.action, {
@@ -636,5 +637,6 @@ function setActive(btn) {
         alert("Une erreur est survenue. Réessayez.");
     });
 });
+</script>
 </body>
 </html>
