--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@ body.no-scroll {
         </select>
     </div>
     <div>
+        <div>
+        <label for="date-evenement" class="sr-only">Date de l'événement</label>
+        <input type="date" id="date-evenement" name="date-evenement" class="form-input">
+    </div>
         <label for="nom" class="sr-only">Nom</label>
         <input type="text" id="nom" name="nom" placeholder="Nom" class="form-input" required>
     </div>
