--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ body.no-scroll {
     <div>
         <div>
         <label for="date-evenement" class="sr-only">Date de l'événement</label>
-        <input type="date" id="date-evenement" name="date-evenement" class="form-input">
+        <input type="text" id="date-evenement" name="date-evenement" placeholder="Date de l'événement" class="form-input">
     </div>
         <label for="nom" class="sr-only">Nom</label>
         <input type="text" id="nom" name="nom" placeholder="Nom" class="form-input" required>
