--- a/index.html
+++ b/index.html
@@ -172,30 +172,59 @@ body.no-scroll {
             <option>Autre</option>
         </select>
     </div>
-    <div>
-        <div>
-        <label for="date-evenement" class="sr-only">Date de l'événement</label>
-        <input type="text" id="date-evenement" name="date-evenement" placeholder="Date de l'événement" class="form-input">
+    <div class="relative">
+    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+        <svg class="h-5 w-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+        </svg>
     </div>
-        <label for="nom" class="sr-only">Nom</label>
-        <input type="text" id="nom" name="nom" placeholder="Nom" class="form-input" required>
+    <input type="text" id="date-evenement" name="date-evenement" placeholder="Date de l'événement" class="form-input pl-10">
+</div>
+
+<div class="relative">
+    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+        <svg class="h-5 w-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
+        </svg>
     </div>
-    <div>
-        <label for="prenom" class="sr-only">Prénom</label>
-        <input type="text" id="prenom" name="prenom" placeholder="Prénom" class="form-input" required>
+    <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" class="form-input pl-10">
+</div>
+
+<div class="relative">
+    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+        <svg class="h-5 w-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
+        </svg>
     </div>
-    <div>
-        <label for="email" class="sr-only">Email</label>
-        <input type="email" id="email" name="email" placeholder="Email" class="form-input" required>
+    <input type="text" id="nom" name="nom" placeholder="Nom" class="form-input pl-10">
+</div>
+
+<div class="relative">
+    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+        <svg class="h-5 w-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
+        </svg>
     </div>
-    <div>
-        <label for="telephone" class="sr-only">Téléphone</label>
-        <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" class="form-input">
+    <input type="text" id="prenom" name="prenom" placeholder="Prénom" class="form-input pl-10">
+</div>
+
+<div class="relative">
+    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+        <svg class="h-5 w-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+        </svg>
     </div>
-    <div>
-        <label for="message" class="sr-only">Message</label>
-        <textarea id="message" name="message" rows="4" placeholder="Votre message..." class="form-input" required></textarea>
+    <input type="email" id="email" name="email" placeholder="Email" class="form-input pl-10">
+</div>
+
+<div class="relative">
+    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+        <svg class="h-5 w-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+        </svg>
     </div>
+    <textarea id="message" name="message" rows="4" placeholder="Votre message..." class="form-input pl-10"></textarea>
+</div>
     <button type="submit" class="w-full bg-[#E0005B] text-white px-4 py-3 rounded-lg font-semibold hover:bg-opacity-90">Envoyer</button>
 </form>
 <div id="form-confirmation" class="hidden text-green-600 text-center mt-6 font-semibold">
