--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@ body.no-scroll {
             <a href="#comparateur" class="text-gray-600 hover:text-[#E0005B] transition-colors">Comparateur</a>
             <a href="#contact" class="text-gray-600 hover:text-[#E0005B] transition-colors">Contact</a>
         </nav>
-        <a href="#contact" class="hidden sm:inline-block bg-[#E0005B] text-white px-4 py-2 rounded-lg font-semibold hover:bg-opacity-90 transition-all">Demander un devis</a>
+        <a href="#contact" class="sm:inline-block bg-[#E0005B] text-white px-4 py-2 rounded-lg font-semibold hover:bg-opacity-90 transition-all">
+    <span class="hidden sm:inline">Demander un devis</span>
+    <svg class="sm:hidden h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5h18M3 12h18M3 19h18"/>
+    </svg>
+</a>
     </div>
 </header>
 
